Prevent Component Overflow

--- a/forum/src/index.css
+++ b/forum/src/index.css
@@ -1,4 +1,3 @@
-
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -12,8 +11,14 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
 
- 
+:root, html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* Prevent horizontal overflow */
 }
 
 a {
@@ -31,6 +36,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;*/
+
 }
 
 h1 {
